--- a/markdown_generator/mypublications.bib
+++ b/markdown_generator/mypublications.bib
@@ -9,9 +9,9 @@
 }
 
 @inproceedings{smyrlis2017parallelization,
-  title={Parallelization and energy evaluation of interframe compression technique for video images—QSDPCM},
+  title={Parallelization and energy evaluation of interframe compression technique for video images QSDPCM},
   author={Smyrlis, Panagiotis N and Tsouros, Dimosthenis C and Dasygenis, Minas},
-  booktitle={Power and Timing Modeling, Optimization and Simulation (PATMOS), 2017 27th International Symposium on},
+  booktitle={2017 27th International Symposium on Power and Timing Modeling, Optimization and Simulation (PATMOS)},
   pages={1--8},
   year={2017},
   organization={IEEE}
