--- a/_talks/2023-08-27-pthg23.md
+++ b/_talks/2023-08-27-pthg23.md
@@ -1,5 +1,5 @@
 ---
-title: "Holy Grail 2.0: From Natural Language to Constraint Models."
+title: "Holy Grail 2.0: From Natural Language to Constraint Models"
 collection: talks
 type: "Presentation"
 permalink: /talks/2023-08-27-pthg23
