--- a/_talks/2023-08-29-cp23.md
+++ b/_talks/2023-08-29-cp23.md
@@ -1,5 +1,5 @@
 ---
-title: "Holy Grail 2.0: From Natural Language to Constraint Models."
+title: "Guided Bottom-up Interactive Constraint Acquisition"
 collection: talks
 type: "Presentation"
 permalink: /talks/2023-08-29-cp23
