--- a/markdown_generator/mypublications.bib
+++ b/markdown_generator/mypublications.bib
@@ -1,4 +1,3 @@
-
 @inproceedings{tsouros2017automated,
   title={Automated collagen proportional area extraction in liver biopsy images using a novel classification via clustering algorithm},
   author={Tsouros, Dimosthenis C and Smyrlis, Panagiotis N and Tsipouras, Markos G and Tsalikakis, Dimitrios G and Giannakeas, Nikolaos and Tzallas, Alexandros T and Manousou, Pinelopi},
@@ -9,12 +8,21 @@
 }
 
 @inproceedings{smyrlis2017parallelization,
-  title={Parallelization and energy evaluation of interframe compression technique for video images QSDPCM},
+  title={Parallelization and energy evaluation of interframe compression technique for video images—QSDPCM},
   author={Smyrlis, Panagiotis N and Tsouros, Dimosthenis C and Dasygenis, Minas},
-  booktitle={2017 27th International Symposium on Power and Timing Modeling, Optimization and Simulation (PATMOS)},
+  booktitle={Power and Timing Modeling, Optimization and Simulation (PATMOS), 2017 27th International Symposium on},
   pages={1--8},
   year={2017},
   organization={IEEE}
+}
+
+@article{smyrlis2018constrained,
+  title={Constrained K-Means Classification.},
+  author={Smyrlis, Panagiotis N and Tsouros, Dimosthenis C and Tsipouras, Markos G},
+  journal={Engineering, Technology \& Applied Science Research},
+  volume={8},
+  number={4},
+  year={2018}
 }
 
 @inproceedings{tsouros2018efficient,
@@ -38,7 +46,7 @@
 @inproceedings{triantafyllou2019architecture,
   title={An architecture model for smart farming},
   author={Triantafyllou, Anna and Tsouros, Dimosthenis C and Sarigiannidis, Panagiotis and Bibi, Stamatia},
-  booktitle={2019 15th International Conference on Distributed Computing in Sensor Systems (DCOSS)},
+  booktitle={2019 15th International conference on distributed computing in sensor systems (DCOSS)},
   pages={385--392},
   year={2019},
   organization={IEEE}
@@ -53,6 +61,12 @@
   organization={IEEE}
 }
 
+@article{lazaar2019constraint,
+  title={Constraint Acquisition Plateform},
+  author={Lazaar, Nadjib and Bessiere, Christian and Tsouros, Dimosthenis C and Lee, Teddy},
+  year={2019}
+}
+
 @inproceedings{tsouros2019structure,
   title={Structure-driven multiple constraint acquisition},
   author={Tsouros, Dimosthenis C and Stergiou, Kostas and Bessiere, Christian},
@@ -60,6 +74,17 @@
   pages={709--725},
   year={2019},
   organization={Springer International Publishing}
+}
+
+@article{tsouros2019review,
+  title={A review on UAV-based applications for precision agriculture},
+  author={Tsouros, Dimosthenis C and Bibi, Stamatia and Sarigiannidis, Panagiotis G},
+  journal={Information},
+  volume={10},
+  number={11},
+  pages={349},
+  year={2019},
+  publisher={MDPI}
 }
 
 @inproceedings{bonotis2019automated,
@@ -71,6 +96,16 @@
   organization={IEEE}
 }
 
+@article{tsouros2020novel,
+  title={A novel classification via clustering algorithm for fibrosis assessment in liver biopsies},
+  author={Tsouros, Dimosthenis C and Smyrlis, Panagiotis N and Tsalikakis, Dimitrios G and Giannakeas, Nikolaos and Tzallas, Alexandros T and Manousou, Pinelopi and Tsipouras, Markos G},
+  journal={Health and Technology},
+  volume={10},
+  pages={777--785},
+  year={2020},
+  publisher={Springer Berlin Heidelberg}
+}
+
 @inproceedings{tsouros2020omissions,
   title={Omissions in constraint acquisition},
   author={Tsouros, Dimosthenis C and Stergiou, Kostas and Bessiere, Christian},
@@ -78,6 +113,17 @@
   pages={935--951},
   year={2020},
   organization={Springer International Publishing}
+}
+
+@article{tsouros2020efficient,
+  title={Efficient multiple constraint acquisition},
+  author={Tsouros, Dimosthenis C and Stergiou, Kostas},
+  journal={Constraints},
+  volume={25},
+  number={3},
+  pages={180--225},
+  year={2020},
+  publisher={Springer US New York}
 }
 
 @inproceedings{tsouros2020towards,
@@ -107,6 +153,13 @@
   organization={MDPI}
 }
 
+@phdthesis{tsouros2021techniques,
+  title={Techniques for learning constraint satisfaction problems with applications in telecommunications},
+  author={Tsouros, Dimosthenis},
+  year={2021},
+  school={$\Pi$$\alpha$$\nu$$\varepsilon$$\pi$$\iota$$\sigma$$\tau$$\acute{\eta}$$\mu$$\iota$o $\Delta$$\upsilon$$\tau$$\iota$$\kappa$$\acute{\eta}$$\varsigma$ M$\alpha$$\kappa$$\varepsilon$$\delta$o$\nu$$\acute{\iota}$$\alpha$$\varsigma$. $\Sigma$$\chi$o$\lambda$$\acute{\eta}$ $\Pi$o$\lambda$$\upsilon$$\tau$$\varepsilon$$\chi$$\nu$$\iota$$\kappa$$\acute{\eta}$. T$\mu$$\acute{\eta}$$\mu$$\alpha$ H$\lambda$$\varepsilon$$\kappa$$\tau$$\rho$o$\lambda${\'o}$\gamma$$\omega$$\nu$~…}
+}
+
 @inproceedings{kiropoulos2022uav,
   title={UAV saffran monitoring process},
   author={Kiropoulos, Konstantinos and Dimaraki, Foteini and Tsouros, Dimosthenis C and Bibi, Stamatia},
@@ -114,6 +167,30 @@
   pages={1--4},
   year={2022},
   organization={IEEE}
+}
+
+@inproceedings{tsouros2023learning,
+  title={Learning constraint models from data},
+  author={Tsouros, Dimosthenis C and Guns, Tias and Stergiou, Kostas},
+  booktitle={Proc. AAAI 2023 Bridge on Constraint Programming and Machine Learning (CPML)},
+  year={2023}
+}
+
+@article{bessiere2023learning,
+  title={Learning constraints through partial queries},
+  author={Bessiere, Christian and Carbonnel, Clement and Dries, Anton and Hebrard, Emmanuel and Katsirelos, George and Narodytska, Nina and Quimper, Claude-Guy and Stergiou, Kostas and Tsouros, Dimosthenis C and Walsh, Toby},
+  journal={Artificial Intelligence},
+  volume={319},
+  pages={103896},
+  year={2023},
+  publisher={Elsevier}
+}
+
+@inproceedings{tsouros2023holy,
+  title={Holy Grail 2.0: From Natural Language to Constraint Models},
+  author={Tsouros, Dimos and Verhaeghe, H{\'e}l{\`e}ne and Kad{\i}o{\u{g}}lu, Serdar and Guns, Tias},
+  booktitle={CP23 workshop on Progress Towards the Holy Grail},
+  year={2023}
 }
 
 @inproceedings{ploskas2023p,
@@ -136,4 +213,66 @@
   author={Tsouros, Dimos and Berden, Senne and Guns, Tias},
   booktitle={29th International Conference on Principles and Practice of Constraint Programming (CP 2023)},
   year={2023}
+}
+
+@inproceedings{bleukx2023breaking,
+  title={Breaking Constraint Modelling Languages with Metamorphic Testing},
+  author={Bleukx, Ignace and Vanroose, Wout and Devriendt, Jo and Tsouros, Dimos and Verhaeghe, H{\'e}l{\`e}ne and Guns, Tias},
+  booktitle={The 22nd workshop on Constraint Modelling and Reformulation, Date: 2023/08/27-2023/08/27, Location: Toronta, Canada},
+  year={2023}
+}
+
+@inproceedings{tsouros2024learning,
+  title={Learning to learn in interactive constraint acquisition},
+  author={Tsouros, Dimosthenis and Berden, Senne and Guns, Tias},
+  booktitle={Proceedings of the AAAI Conference on Artificial Intelligence},
+  volume={38},
+  number={8},
+  pages={8154--8162},
+  year={2024}
+}
+
+@inproceedings{michailidis2024constraint,
+  title={Constraint Modelling with LLMs Using In-Context Learning},
+  author={Michailidis, Kostis and Tsouros, Dimos and Guns, Tias},
+  booktitle={30th International Conference on Principles and Practice of Constraint Programming},
+  year={2024}
+}
+
+@article{balafas2024enhancing,
+  title={Enhancing Constraint Acquisition through Hybrid Learning: An Integration of Passive and Active Learning Strategies},
+  author={Balafas, Vasileios and Tsouros, Dimosthenis C and Ploskas, Nikolaos and Stergiou, Kostas},
+  journal={International Journal on Artificial Intelligence Tools},
+  year={2024},
+  publisher={World Scientific Publishing Company}
+}
+
+@inproceedings{iosif2024cp,
+  title={A CP/LS Heuristic Method for Maxmin and Minmax Location Problems with Distance Constraints},
+  author={Iosif, Panteleimon and Ploskas, Nikolaos and Stergiou, Kostas and Tsouros, Dimosthenis C},
+  booktitle={30th International Conference on Principles and Practice of Constraint Programming (CP 2024)},
+  year={2024},
+  organization={Schloss Dagstuhl--Leibniz-Zentrum f{\"u}r Informatik}
+}
+
+@inproceedings{vanroose2024mutational,
+  title={Mutational Fuzz Testing for Constraint Modeling Systems},
+  author={Vanroose, Wout and Bleukx, Ignace and Devriendt, Jo and Tsouros, Dimos and Verhaeghe, H{\'e}l{\`e}ne and Guns, Tias},
+  booktitle={30th International Conference on Principles and Practice of Constraint Programming (CP 2024)},
+  year={2024},
+  organization={Schloss Dagstuhl--Leibniz-Zentrum f{\"u}r Informatik}
+}
+
+@inproceedings{tsourosgeneralizing,
+  title={Generalizing Constraint Models in Constraint Acquisition},
+  author={Tsouros, Dimos and Prestwich, Steven and Guns, Tias}
+  booktitle={CP24 workshop on Progress Towards the Holy Grail},
+  year={2024}
+}
+
+@inproceedings{bleukx2024efficient,
+  title={Efficient Modeling of Half-reified Global Constraints},
+  author={Bleukx, Ignace and Verhaeghe, H{\'e}l{\`e}ne and Tsouros, Dimos and Guns, Tias},
+  booktitle={The 23rd workshop on Constraint Modelling and Reformulation, Date: 2024/09/02-2024/09/02, Location: Gerona, Spain},
+  year={2024}
 }
