--- a/markdown_generator/mypublications.bib
+++ b/markdown_generator/mypublications.bib
@@ -265,7 +265,7 @@
 
 @inproceedings{tsourosgeneralizing,
   title={Generalizing Constraint Models in Constraint Acquisition},
-  author={Tsouros, Dimos and Prestwich, Steven and Guns, Tias}
+  author={Tsouros, Dimos and Prestwich, Steven and Guns, Tias},
   booktitle={CP24 workshop on Progress Towards the Holy Grail},
   year={2024}
 }
